--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -944,18 +944,18 @@
 		}
 		Ocean
 		{
-			ocean = False
-			oceanColor = 0,0,0,1
-			oceanHeight = 0
-			density = 1
 			minLevel = 1
 			maxLevel = 6
 			minDetailDistance = 8
 			maxQuadLengthsPerFrame = 0.03
+			ocean = True
+			oceanColor = 0.116715364,0.12626785,0.156716406,1
+			oceanHeight = 0
+			density = 1
 			Material
 			{
-				color = 0.4138052,0.3870942,0.5149254,1
-				colorFromSpace = 0.1168781,0.1264566,0.1568628,1
+				color = 0.413805217,0.387094229,0.514925361,1
+				colorFromSpace = 0.116878122,0.126456618,0.156862751,1
 				specColor = 1,1,1,1
 				shininess = 1
 				gloss = 0.2
@@ -977,7 +977,7 @@
 				oceanOpacity = 0.3
 				falloffPower = 3
 				falloffExp = 0.05
-				fogColor = 0.3214434,0.6112322,0.9477612,1
+				fogColor = 0.321443439,0.611232221,0.947761178,1
 				heightFallOff = 0.2
 				globalDensity = -8E-06
 				atmosphereDepth = 50000
@@ -992,8 +992,8 @@
 			}
 			FallbackMaterial
 			{
-				color = 0.3366037,0.3780804,0.4477612,1
-				colorFromSpace = 0.1168781,0.1264566,0.1568628,1
+				color = 0.336603671,0.378080368,0.447761178,1
+				colorFromSpace = 0.116878122,0.126456618,0.156862751,1
 				specColor = 0.8493402,0.8493402,0.8493402,1
 				shininess = 1
 				gloss = 0.3336538
@@ -1014,8 +1014,8 @@
 				afgBase = 0.6
 				afgLerp = False
 				afgMin = 0.05
-				fogColorEnd = 0,0.085,0.1225,1
-				fogColorStart = 0,0.34,0.49,1
+				fogColorEnd = 0,0.0850000009,0.122500002,1
+				fogColorStart = 0,0.340000004,0.49000001,1
 				fogDensityAltScalar = -0.0008
 				fogDensityEnd = 0.025
 				fogDensityExponent = 1
