--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -554,6 +554,46 @@
 						}
 					}
 				}
+				City
+				{
+					debugOrientated = False
+					frameDelta = 1
+					randomizeOnSphere = False
+					reorientToSphere = True
+					reorientFinalAngle = 67.65
+					reorientInitialUp = 0,1,0
+					repositionRadial = 1666,1470,2891
+					repositionRadiusOffset = -1
+					repositionToSphere = True
+					repositionToSphereSurface = True
+					repositionToSphereSurfaceAddHeight = True
+					visibilityRange = 10000
+					commnetStation = False
+					order = 100
+					enabled = True
+					name = Monolith00
+					index = 0
+				}
+				City
+				{
+					debugOrientated = False
+					frameDelta = 1
+					randomizeOnSphere = True
+					reorientToSphere = True
+					reorientFinalAngle = 45
+					reorientInitialUp = 0,1,0
+					repositionRadial = 513856,-290549,-122798
+					repositionRadiusOffset = 2948.5
+					repositionToSphere = True
+					repositionToSphereSurface = True
+					repositionToSphereSurfaceAddHeight = False
+					visibilityRange = 10000
+					commnetStation = False
+					order = 100
+					enabled = True
+					name = Randolith
+					index = 0
+				}
 			}
 		}
 	}
