--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
@@ -510,6 +510,26 @@
 						}
 					}
 				}
+				City
+				{
+					debugOrientated = False
+					frameDelta = 1
+					randomizeOnSphere = True
+					reorientToSphere = True
+					reorientFinalAngle = 45
+					reorientInitialUp = 0,1,0
+					repositionRadial = 513856,-290549,-122798
+					repositionRadiusOffset = 2948.5
+					repositionToSphere = True
+					repositionToSphereSurface = True
+					repositionToSphereSurfaceAddHeight = False
+					visibilityRange = 10000
+					commnetStation = False
+					order = 100
+					enabled = True
+					name = Randolith
+					index = 0
+				}
 			}
 		}
 	}
