--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -980,7 +980,7 @@
 							name = DesertMountains
 							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0.473330514462883
+							lonDelta = 0.476008294508971
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.24626863,0.228674337,0.214408696,1
@@ -1292,7 +1292,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.505051371493795
+							latDelta = 0.505546810006219
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -1570,26 +1570,6 @@
 					name = _CoastlineLOD
 					index = 0
 				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = -15
-					reorientInitialUp = 0,1,0
-					repositionRadial = 157000,-1000,-570000
-					repositionRadiusOffset = 42.7000007629395
-					repositionToSphere = True
-					repositionToSphereSurface = False
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 50000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = KSC
-					index = 0
-				}
 				MapDecalTangent
 				{
 					absolute = True
@@ -1608,26 +1588,6 @@
 					order = 99999
 					enabled = True
 					name = KSC
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = -117.65
-					reorientInitialUp = 0,1,0
-					repositionRadial = -468960.406,211164.703,-310261.688
-					repositionRadiusOffset = 201
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 40000
-					commnetStation = True
-					order = 10000
-					enabled = True
-					name = KSC2
 					index = 0
 				}
 				MapDecal
@@ -1650,106 +1610,6 @@
 					name = KSC2
 					index = 0
 				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = 15
-					reorientInitialUp = 0,1,0
-					repositionRadial = 126710,349600,-472140
-					repositionRadiusOffset = 997.5
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 10000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = Monolith00
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = -56
-					reorientInitialUp = 0,1,0
-					repositionRadial = 96716,-6735,-594956
-					repositionRadiusOffset = 2803
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 10000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = Monolith01
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = 45
-					reorientInitialUp = 0,1,0
-					repositionRadial = 513856,-290549,-122798
-					repositionRadiusOffset = 2948.5
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 10000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = Monolith02
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = True
-					reorientToSphere = True
-					reorientFinalAngle = 118.2294
-					reorientInitialUp = 0,1,0
-					repositionRadial = 222527.031,6504.479,557170.875
-					repositionRadiusOffset = 2948.5
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 10000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = Randolith
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = 0
-					reorientInitialUp = 0,1,0
-					repositionRadial = -468635.906,-68111.1563,-370297.594
-					repositionRadiusOffset = 95
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = True
-					visibilityRange = 75000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = Pyramids
-					index = 0
-				}
 				FlattenArea
 				{
 					DEBUG_showColors = False
@@ -1762,46 +1622,6 @@
 					order = 99999
 					enabled = True
 					name = Pyramids
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = 80
-					reorientInitialUp = 0,1,0
-					repositionRadial = -52304.5898,594232.5,-65713.6172
-					repositionRadiusOffset = 140
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 8000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = UFO
-					index = 0
-				}
-				City
-				{
-					debugOrientated = False
-					frameDelta = 1
-					randomizeOnSphere = False
-					reorientToSphere = True
-					reorientFinalAngle = 150
-					reorientInitialUp = 0,1,0
-					repositionRadial = 186253.594,-16135.6797,-570176.813
-					repositionRadiusOffset = 28
-					repositionToSphere = True
-					repositionToSphereSurface = True
-					repositionToSphereSurfaceAddHeight = False
-					visibilityRange = 5000
-					commnetStation = False
-					order = 100
-					enabled = True
-					name = IslandAirfield
 					index = 0
 				}
 				MapDecalTangent
@@ -1824,107 +1644,22 @@
 					name = IslandAirfield
 					index = 0
 				}
-				City2
-				{
-					snapToSurface = True
-					alt = 2651.62050466868
-					lat = -11.95
-					lon = 33.74
-					objectName = Harvester Massif
-					up = 0,1,0
-					rotation = 0
-					snapHeightOffset = 0
-					visibilityRange = 30000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = CommNetDish
-					index = 0
-				}
-				City2
-				{
-					snapToSurface = True
-					alt = 366.361170452205
-					lat = 5.36
-					lon = 108.55
-					objectName = Nye Island
-					up = 0,1,0
-					rotation = 0
-					snapHeightOffset = -15
-					visibilityRange = 30000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = CommNetDish
-					index = 1
-				}
-				City2
-				{
-					snapToSurface = True
-					alt = 5424.37463306414
-					lat = -59.59
-					lon = -25.87
-					objectName = Mesa South
-					up = 0,1,0
-					rotation = 0
-					snapHeightOffset = 0
-					visibilityRange = 30000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = CommNetDish
-					index = 2
-				}
-				City2
-				{
-					snapToSurface = True
-					alt = 4012.04935493413
-					lat = 9.45
-					lon = -172.11
-					objectName = Crater Rim
-					up = 0,1,0
-					rotation = 0
-					snapHeightOffset = 0
-					visibilityRange = 30000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = CommNetDish
-					index = 3
-				}
-				City2
-				{
-					snapToSurface = True
-					alt = 2776.81650744681
-					lat = 63.095
-					lon = -90.08
-					objectName = North Station One
-					up = 0,1,0
-					rotation = 0
-					snapHeightOffset = 0
-					visibilityRange = 30000
-					commnetStation = True
-					order = 100
-					enabled = True
-					name = CommNetDish
-					index = 4
-				}
 			}
 		}
 		Ocean
 		{
+			ocean = False
+			oceanColor = 0,0,0,1
+			oceanHeight = 0
+			density = 1
 			minLevel = 2
 			maxLevel = 7
 			minDetailDistance = 6
 			maxQuadLengthsPerFrame = 0.03
-			ocean = True
-			oceanColor = 0.0705882385,0.101960786,0.156862751,1
-			oceanHeight = 0
-			density = 1
 			Material
 			{
-				color = 0.450980395,0.525490224,0.525490224,1
-				colorFromSpace = 0.0695908442,0.10210041,0.156716406,1
+				color = 0.4509804,0.5254902,0.5254902,1
+				colorFromSpace = 0.06959084,0.1021004,0.1567164,1
 				specColor = 1,1,1,1
 				shininess = 0.697751
 				gloss = 0.2
@@ -1942,11 +1677,11 @@
 				displacement = 0.05
 				texDisplacement = -0.31
 				dispFreq = 0.15
-				mix = 0.3061829
+				mix = 0.1078949
 				oceanOpacity = 0.5
 				falloffPower = 1.1
 				falloffExp = 2
-				fogColor = 0.917910457,0.917910457,1,1
+				fogColor = 0.9179105,0.9179105,1,1
 				heightFallOff = 0.2
 				globalDensity = -8E-06
 				atmosphereDepth = 70000
@@ -1961,8 +1696,8 @@
 			}
 			FallbackMaterial
 			{
-				color = 0.494117647,0.552941203,0.627451003,1
-				colorFromSpace = 0.0509803928,0.164705887,0.215686277,1
+				color = 0.4941176,0.5529412,0.627451,1
+				colorFromSpace = 0.05098039,0.1647059,0.2156863,1
 				specColor = 1,1,1,1
 				shininess = 1
 				gloss = 0.4327519
@@ -1983,8 +1718,8 @@
 				afgBase = 0.6
 				afgLerp = False
 				afgMin = 0.05
-				fogColorEnd = 0,0.0850000009,0.122500002,1
-				fogColorStart = 0,0.340000004,0.49000001,1
+				fogColorEnd = 0,0.085,0.1225,1
+				fogColorStart = 0,0.34,0.49,1
 				fogDensityAltScalar = -0.0008
 				fogDensityEnd = 0.025
 				fogDensityExponent = 1
@@ -2025,7 +1760,7 @@
 				}
 				OceanFX
 				{
-					angle = -0.5386867
+					angle = -0.5387893
 					blendA = 0
 					blendB = 0
 					framesPerSecond = 10
@@ -2033,7 +1768,7 @@
 					spaceAltitude = 0
 					spaceSurfaceBlend = 1
 					specColor = 1,1,1,1
-					texBlend = 0.3061829
+					texBlend = 0.1078949
 					txIndex = 2
 					order = 100
 					enabled = True
