--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
@@ -514,6 +514,7 @@
 					persistance = 0.5
 					seed = 1283704385
 					mode = Low
+					noiseType = Perlin
 					lacunarity = 2
 					order = 103
 					enabled = True
