--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -980,7 +980,7 @@
 							name = DesertMountains
 							latDelta = 1
 							latitudeDouble = False
-							lonDelta = 0.476008294508971
+							lonDelta = 0.4750158085657
 							minimumRealHeight = 0
 							noiseBlend = 0.5
 							noiseColor = 0.24626863,0.228674337,0.214408696,1
@@ -1292,7 +1292,7 @@
 							coveragePersistance = 0.7
 							coverageSeed = 4563456
 							name = Savannah
-							latDelta = 0.505546810006219
+							latDelta = 0.506086580622294
 							latitudeDouble = False
 							lonDelta = 0
 							minimumRealHeight = 0
@@ -1648,18 +1648,18 @@
 		}
 		Ocean
 		{
-			ocean = False
-			oceanColor = 0,0,0,1
-			oceanHeight = 0
-			density = 1
 			minLevel = 2
 			maxLevel = 7
 			minDetailDistance = 6
 			maxQuadLengthsPerFrame = 0.03
+			ocean = True
+			oceanColor = 0.0705882385,0.101960786,0.156862751,1
+			oceanHeight = 0
+			density = 1
 			Material
 			{
-				color = 0.4509804,0.5254902,0.5254902,1
-				colorFromSpace = 0.06959084,0.1021004,0.1567164,1
+				color = 0.450980395,0.525490224,0.525490224,1
+				colorFromSpace = 0.0695908442,0.10210041,0.156716406,1
 				specColor = 1,1,1,1
 				shininess = 0.697751
 				gloss = 0.2
@@ -1677,11 +1677,11 @@
 				displacement = 0.05
 				texDisplacement = -0.31
 				dispFreq = 0.15
-				mix = 0.1078949
+				mix = 0.253479
 				oceanOpacity = 0.5
 				falloffPower = 1.1
 				falloffExp = 2
-				fogColor = 0.9179105,0.9179105,1,1
+				fogColor = 0.917910457,0.917910457,1,1
 				heightFallOff = 0.2
 				globalDensity = -8E-06
 				atmosphereDepth = 70000
@@ -1696,8 +1696,8 @@
 			}
 			FallbackMaterial
 			{
-				color = 0.4941176,0.5529412,0.627451,1
-				colorFromSpace = 0.05098039,0.1647059,0.2156863,1
+				color = 0.494117647,0.552941203,0.627451003,1
+				colorFromSpace = 0.0509803928,0.164705887,0.215686277,1
 				specColor = 1,1,1,1
 				shininess = 1
 				gloss = 0.4327519
@@ -1718,8 +1718,8 @@
 				afgBase = 0.6
 				afgLerp = False
 				afgMin = 0.05
-				fogColorEnd = 0,0.085,0.1225,1
-				fogColorStart = 0,0.34,0.49,1
+				fogColorEnd = 0,0.0850000009,0.122500002,1
+				fogColorStart = 0,0.340000004,0.49000001,1
 				fogDensityAltScalar = -0.0008
 				fogDensityEnd = 0.025
 				fogDensityExponent = 1
@@ -1760,7 +1760,7 @@
 				}
 				OceanFX
 				{
-					angle = -0.5387893
+					angle = -0.56866
 					blendA = 0
 					blendB = 0
 					framesPerSecond = 10
@@ -1768,8 +1768,8 @@
 					spaceAltitude = 0
 					spaceSurfaceBlend = 1
 					specColor = 1,1,1,1
-					texBlend = 0.1078949
-					txIndex = 2
+					texBlend = 0.253479
+					txIndex = 3
 					order = 100
 					enabled = True
 					name = OceanFX
