eve atmo and stuff

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -174,13 +174,15 @@
 			addAFG = True
 			pressureCurve
 			{
-				key = 0 506.625 -0.08693577 -0.08693577
-				key = 9723.525 113.5 -0.0149408 -0.0149408
-				key = 20000 24 -0.001997488 -0.001997488
-				key = 30000 5 -0.0009176003 -0.0009176003
-				key = 45000 0.5 -3.677358E-05 -3.677358E-05
-				key = 80000 0.0023 -6.030081E-07 -6.030081E-07
-				key = 90000 0 0 0
+				key = 0 506.625 0 -0.04423852
+				key = 15000 95.6891 -0.01304926 -0.01304926
+				key = 25000 18.07334 -0.003012223 -0.003012223
+				key = 40000 3.5 -0.0005689354 -0.0005689354
+				key = 50000 0.1217772 -2.02962E-05 -2.02962E-05
+				key = 60000 0.02300074 -3.8335E-06 -3.8335E-06
+				key = 70000 0.004344278 -7.24E-07 -7.24E-07
+				key = 80000 0.0008205283 -1.368E-07 -1.368E-07
+				key = 90000 0 -2.58E-08 0
 			}
 			temperatureCurve
 			{
@@ -195,8 +197,8 @@
 			{
 				key = 0 1 0 0
 				key = 15000 0 0 0
-				key = 50000 0 0 0
-				key = 70000 1.5 0 0
+				key = 50000 0.5 0 0
+				key = 70000 1.5 3.82549E-05 3.82549E-05
 				key = 90000 2 0 0
 			}
 			temperatureLatitudeBiasCurve
@@ -781,19 +783,19 @@
 		}
 		Ocean
 		{
-			ocean = False
-			oceanColor = 0,0,0,1
-			oceanHeight = 0
-			density = 1
 			minLevel = 1
 			maxLevel = 7
 			minDetailDistance = 8
 			maxQuadLengthsPerFrame = 0.03
+			ocean = True
+			oceanColor = 0.266666681,0.243137255,0.305882365,1
+			oceanHeight = 0
+			density = 1.5
 			Material
 			{
-				color = 0.5242465,0.46135,0.5671642,1
-				colorFromSpace = 0.4705882,0.3607843,0.5450981,1
-				specColor = 0.01489836,0.01489836,0.01489836,1
+				color = 0.524246514,0.461349964,0.567164183,1
+				colorFromSpace = 0.470588237,0.360784322,0.545098066,1
+				specColor = 0.0148983598,0.0148983598,0.0148983598,1
 				shininess = 1
 				gloss = 0.2
 				tiling = 2000
@@ -814,7 +816,7 @@
 				oceanOpacity = 1
 				falloffPower = 5
 				falloffExp = 0
-				fogColor = 0.9179105,0.9179105,1,1
+				fogColor = 0.917910457,0.917910457,1,1
 				heightFallOff = 0.2
 				globalDensity = -1.5E-05
 				atmosphereDepth = 150000
@@ -829,8 +831,8 @@
 			}
 			FallbackMaterial
 			{
-				color = 0.5242465,0.46135,0.5671642,1
-				colorFromSpace = 0.2654445,0.2443194,0.3059701,1
+				color = 0.524246514,0.461349964,0.567164183,1
+				colorFromSpace = 0.265444487,0.244319439,0.305970132,1
 				specColor = 1,1,1,1
 				shininess = 1
 				gloss = 1
@@ -851,8 +853,8 @@
 				afgBase = 0.6
 				afgLerp = False
 				afgMin = 0.05
-				fogColorEnd = 0,0.085,0.1225,1
-				fogColorStart = 0.38,0,0.49,1
+				fogColorEnd = 0,0.0850000009,0.122500002,1
+				fogColorStart = 0.379999995,0,0.49000001,1
 				fogDensityAltScalar = -0.0008
 				fogDensityEnd = 0.025
 				fogDensityExponent = 1
