--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -35,5 +35,11 @@
 			@meanAnomalyAtEpoch *= 0.0174532925199433
 			!meanAnomalyAtEpochD = DEL
 		}
+		@PostSpawnOrbit:HAS[#meanAnomalyAtEpochD[*]]
+		{
+			%meanAnomalyAtEpoch = #$meanAnomalyAtEpochD$
+			@meanAnomalyAtEpoch *= 0.0174532925199433
+			!meanAnomalyAtEpochD = DEL
+		}
 	}
 }
