--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -42,6 +42,10 @@
 		{
 			@semiMajorAxis *= #$../SigmaDimensions/Rescale$
 		}
+		@PostSpawnOrbit
+		{
+			@semiMajorAxis *= #$../SigmaDimensions/Rescale$
+		}
 		@ScaledVersion
 		{
 			@Light
