--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Sun/Sun_Atmosphere.cfg
@@ -1,16 +1,14 @@
 @Kopernicus:FOR[SigDim]
 {
-	@Body:HAS[@Template:HAS[#name[Sun]],!Template:HAS[#removeAtmosphere[True]]]
+	@Body:HAS[@Template:HAS[#name[Sun],~removeAtmosphere[True]],!Atmosphere]
 	{
-		%Atmosphere {}
-		@Atmosphere:HAS[~addAFG[False]]
+		Atmosphere
 		{
-			// temp fix for AFG
-			%AtmosphereFromGround
-			{
-				%transformScale = 0,0,0
-			}
+			addAFG = False
 		}
+	}
+	@Body:HAS[@Template:HAS[#name[Sun],~removeAtmosphere[True]]]
+	{
 		@Atmosphere
 		{
 			&maxAltitude = 600000
@@ -40,6 +38,13 @@
 				key = 250000 5800 0.0009989792 0.0009989792
 				key = 500000 6000 0.001352723 0.001352723
 				key = 600000 10000 0.06371323 0
+			}
+		}
+		@Atmosphere:HAS[~addAFG[False]]
+		{
+			%AtmosphereFromGround
+			{
+				&transformScale = 0,0,0
 			}
 		}
 	}
