--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -56,15 +56,20 @@
 				&innerRadiusMult = 0.975
 				&outerRadiusMult = 1.025
 			}
+			@AtmosphereFromGround:HAS[#outerRadius[*]]
+			{
+				@outerRadiusMult = #$../../Properties/radius$
+				@outerRadiusMult /= #$outerRadius$
+			}
 			@AtmosphereFromGround:HAS[~outerRadius[*]]
 			{
 				outerRadius = #$../../Properties/radius$
 				@outerRadius *= #$outerRadiusMult$
 			}
-			@AtmosphereFromGround:HAS[~innerRadius[*]]
+			@AtmosphereFromGround:HAS[#innerRadius[*]]
 			{
-				innerRadius = #$outerRadius$
-				@innerRadius *= #$innerRadiusMult$
+				@innerRadiusMult = #$outerRadius$
+				@innerRadiusMult /= #$innerRadius$
 			}
 			@AtmosphereFromGround:HAS[#transformScale[*]]
 			{
@@ -77,34 +82,36 @@
 			}
 			@AtmosphereFromGround:HAS[~removeAFG[True]]
 			{
-				// inner radius
-				@innerRadius -= #$../../Properties/radius$
-				@innerRadius *= #$../../SigmaDimensions/Atmosphere$
-				@innerRadius *= #$../../SigmaDimensions/atmoVisualEffect$
-				@innerRadius /= #$../../SigmaDimensions/Resize$
-				@innerRadius += #$../../Properties/radius$
-				@innerRadius *= #$../../SigmaDimensions/Resize$
-				
-				// outer radius
-				@outerRadius -= #$../../Properties/radius$
-				@outerRadius *= #$../../SigmaDimensions/Atmosphere$
-				@outerRadius *= #$../../SigmaDimensions/atmoVisualEffect$
-				%transformScale = #$outerRadius$
-				@outerRadius /= #$../../SigmaDimensions/Resize$
-				@outerRadius += #$../../Properties/radius$
-				@outerRadius *= #$../../SigmaDimensions/Resize$
-				!innerRadiusMult,* = DEL
-				!outerRadiusMult,* = DEL
+				!transformScale,* = DEL
+				transformScale = #$../../SigmaDimensions/Resize$
 			}
-			@AtmosphereFromGround:HAS[~removeAFG[True],#transformScale[<6000]]
+			@AtmosphereFromGround:HAS[~removeAFG[True],~transformScale[<1]]
 			{
-				@transformScale = 6000
+				@transformScale = 1
+			}
+			@AtmosphereFromGround:HAS[~removeAFG[True],#transformScale[<1]]
+			{
+				@transformScale != -0.333333333333333
 			}
 			@AtmosphereFromGround:HAS[~removeAFG[True]]
 			{
+				@innerRadiusMult *= #$outerRadiusMult$
+				@innerRadiusMult -= 1
+				@innerRadiusMult *= #$transformScale$
+				@innerRadiusMult *= #$../../SigmaDimensions/atmoVisualEffect$
+				@innerRadiusMult += 1
+				
+				@outerRadiusMult -= 1
+				@outerRadiusMult *= #$transformScale$
+				@outerRadiusMult *= #$../../SigmaDimensions/atmoVisualEffect$
+				@outerRadiusMult += 1
+				
+				@innerRadiusMult /= #$outerRadiusMult$
+				
 				@transformScale *= 2
-				@transformScale /= #$../../Properties/radius$
-				@transformScale /= #$../../SigmaDimensions/Resize$
+				@outerRadiusMult -= 1
+				@transformScale *= #$outerRadiusMult$
+				@outerRadiusMult += 1
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
 			}
