--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -51,25 +51,26 @@
 		}
 		@Atmosphere:HAS[~addAFG[False]]
 		{
-			%AtmosphereFromGround
-			{
-				&innerRadiusMult = 0.975
-				&outerRadiusMult = 1.025
-			}
 			@AtmosphereFromGround:HAS[#outerRadius[*]]
 			{
-				@outerRadiusMult = #$../../Properties/radius$
-				@outerRadiusMult /= #$outerRadius$
+				@outerRadius /= #$../../Properties/radius$
+				&outerRadiusMult = #$outerRadius$
+				!outerRadius,* = DEL
 			}
-			@AtmosphereFromGround:HAS[~outerRadius[*]]
+			%AtmosphereFromGround
 			{
-				outerRadius = #$../../Properties/radius$
-				@outerRadius *= #$outerRadiusMult$
+				&outerRadiusMult = 1.025
 			}
 			@AtmosphereFromGround:HAS[#innerRadius[*]]
 			{
-				@innerRadiusMult = #$outerRadius$
-				@innerRadiusMult /= #$innerRadius$
+				@innerRadius /= #$../../Properties/radius$
+				@innerRadius /= #$outerRadiusMult$
+				&innerRadiusMult = #$innerRadius$
+				!innerRadius,* = DEL
+			}
+			%AtmosphereFromGround
+			{
+				&innerRadiusMult = 0.975
 			}
 			@AtmosphereFromGround:HAS[#transformScale[*]]
 			{
