--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -83,36 +83,30 @@
 			}
 			@AtmosphereFromGround:HAS[~removeAFG[True]]
 			{
-				!transformScale,* = DEL
-				transformScale = #$../../SigmaDimensions/Resize$
-			}
-			@AtmosphereFromGround:HAS[~removeAFG[True],~transformScale[<1]]
-			{
-				@transformScale = 1
-			}
-			@AtmosphereFromGround:HAS[~removeAFG[True],#transformScale[<1]]
-			{
-				@transformScale != -0.333333333333333
-			}
-			@AtmosphereFromGround:HAS[~removeAFG[True]]
-			{
 				@innerRadiusMult *= #$outerRadiusMult$
 				@innerRadiusMult -= 1
-				@innerRadiusMult *= #$transformScale$
 				@innerRadiusMult *= #$../../SigmaDimensions/atmoVisualEffect$
 				@innerRadiusMult += 1
 				
 				@outerRadiusMult -= 1
-				@outerRadiusMult *= #$transformScale$
 				@outerRadiusMult *= #$../../SigmaDimensions/atmoVisualEffect$
+				%transformScale = #$outerRadiusMult$
 				@outerRadiusMult += 1
 				
 				@innerRadiusMult /= #$outerRadiusMult$
 				
 				@transformScale *= 2
-				@outerRadiusMult -= 1
-				@transformScale *= #$outerRadiusMult$
-				@outerRadiusMult += 1
+				@transformScale *= #$../../Properties/radius$
+				@transformScale *= #$../../SigmaDimensions/Resize$
+			}
+			@AtmosphereFromGround:HAS[#transformScale[<7500],~removeAFG[True]]
+			{
+				@transformScale = 7500
+			}
+			@AtmosphereFromGround:HAS[~removeAFG[True]]
+			{
+				@transformScale /= #$../../Properties/radius$
+				@transformScale /= #$../../SigmaDimensions/Resize$
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
 			}
