bop and dres ground textures

--- a/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
@@ -6,15 +6,23 @@
 		{
 			%Material
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&steepTiling = 10
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -24,15 +32,23 @@
 		{
 			%Material
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 30000
+				&steepTiling = 50
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -275,3 +291,4 @@
 		}
 	}
 }
+
