improve ground textures resize

--- a/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/groundTextures.cfg
@@ -62,11 +62,27 @@
 				&groundTexEnd = 1000
 				&steepTexStart = 0
 				&steepTexEnd = 50000
+				&steepNearTiling = 4000
+				&steepTiling = 50
+				&lowNearTiling = 2000
+				&lowMultiFactor = 10
+				&lowBumpNearTiling = 2000
+				&lowBumpFarTiling = 10
+				&midNearTiling = 4000
+				&midMultiFactor = 10
+				&midBumpNearTiling = 8000
+				&midBumpFarTiling = 10
+				&highNearTiling = 4000
+				&highMultiFactor = 10
+				&highBumpNearTiling = 4000
+				&highBumpFarTiling = 10
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1000
 				&groundTexStart = 20000
 				&groundTexEnd = 60000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -76,16 +92,26 @@
 		{
 			%Material
 			{
+				&texTiling = 1000
 				&groundTexStart = 2000
 				&groundTexEnd = 15000
+				&steepTiling = 300
 				&steepTexStart = 100000
 				&steepTexEnd = 200000
+				&deepMultiFactor = 1
+				&mainMultiFactor = 1
+				&highMultiFactor = 1
+				&snowMultiFactor = 1
+				&atmosphereDepth = 55000
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1000
 				&groundTexStart = 20000
 				&groundTexEnd = 60000
+				&multiFactor = 0.5
 			}
+
 		}
 	}
 	@Body:HAS[@Template:HAS[#name[Eve]]]
@@ -98,12 +124,22 @@
 				&groundTexEnd = 10000
 				&steepTexStart = 0
 				&steepTexEnd = 100000
-				&oceanFogDistance = 1000
+				&steepNearTiling = 1000
+				&steepTiling = 50
+				&lowNearTiling = 20000
+				&lowMultiFactor = 10
+				&midNearTiling = 20000
+				&midMultiFactor = 10
+				&midBumpNearTiling = 10000
+				&highNearTiling = 20000
+				&highMultiFactor = 10
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1000
 				&groundTexStart = 20000
 				&groundTexEnd = 60000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -113,15 +149,23 @@
 		{
 			%Material
 			{
+				&texTiling = 80
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&steepTiling = 10
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 80
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -131,15 +175,23 @@
 		{
 			%Material
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&steepTiling = 10
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -153,12 +205,22 @@
 				&groundTexEnd = 10000
 				&steepTexStart = 10000
 				&steepTexEnd = 100000
-				&oceanFogDistance = 1000
+				&steepNearTiling = 1000
+				&steepTiling = 100
+				&lowNearTiling = 4000
+				&lowMultiFactor = 10
+				&midNearTiling = 4000
+				&midMultiFactor = 100
+				&midBumpNearTiling = 1000
+				&highNearTiling = 4000
+				&highMultiFactor = 4
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 4000
 				&groundTexStart = 0
 				&groundTexEnd = 10000
+				&multiFactor = 100
 			}
 		}
 	}
@@ -172,12 +234,22 @@
 				&groundTexEnd = 10000
 				&steepTexStart = 10000
 				&steepTexEnd = 100000
-				&oceanFogDistance = 1000
+				&steepNearTiling = 2000
+				&steepTiling = 100
+				&lowNearTiling = 2000
+				&lowMultiFactor = 8
+				&midNearTiling = 1000
+				&midMultiFactor = 2
+				&midBumpNearTiling = 1000
+				&highNearTiling = 1000
+				&highMultiFactor = 2
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1000
 				&groundTexStart = 20000
 				&groundTexEnd = 60000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -187,15 +259,23 @@
 		{
 			%Material
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 5000
+				&steepTiling = 10
 				&steepTexStart = 60000
 				&steepTexEnd = 100000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 5000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -209,11 +289,27 @@
 				&groundTexEnd = 20000
 				&steepTexStart = 0
 				&steepTexEnd = 200000
+				&steepNearTiling = 1000
+				&steepTiling = 10
+				&lowNearTiling = 500
+				&lowMultiFactor = 100
+				&lowBumpNearTiling = 5000
+				&lowBumpFarTiling = 1000
+				&midNearTiling = 500
+				&midMultiFactor = 100
+				&midBumpNearTiling = 500
+				&midBumpFarTiling = 100
+				&highNearTiling = 500
+				&highMultiFactor = 100
+				&highBumpNearTiling = 500
+				&highBumpFarTiling = 10
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -227,12 +323,22 @@
 				&groundTexEnd = 40000
 				&steepTexStart = 20000
 				&steepTexEnd = 50000
-				&oceanFogDistance = 1000
+				&steepNearTiling = 1
+				&steepTiling = 2
+				&lowNearTiling = 1200
+				&lowMultiFactor = 5
+				&midNearTiling = 1000
+				&midMultiFactor = 4
+				&midBumpNearTiling = 1000
+				&highNearTiling = 800
+				&highMultiFactor = 3
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 4000
 				&groundTexStart = 0
 				&groundTexEnd = 6000
+				&multiFactor = 24
 			}
 		}
 	}
@@ -242,15 +348,23 @@
 		{
 			%Material
 			{
+				&texTiling = 256
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&steepTiling = 10
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 3
+				&mainMultiFactor = 6
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -260,15 +374,23 @@
 		{
 			%Material
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&steepTiling = 10
 				&steepTexStart = 200000
 				&steepTexEnd = 300000
+				&deepMultiFactor = 8
+				&mainMultiFactor = 10
+				&highMultiFactor = 12
+				&snowMultiFactor = 14
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 1024
 				&groundTexStart = 0
 				&groundTexEnd = 20000
+				&multiFactor = 0.5
 			}
 		}
 	}
@@ -278,17 +400,24 @@
 		{
 			%Material
 			{
+				&texTiling = 2000
 				&groundTexStart = 5000
 				&groundTexEnd = 12000
+				&steepTiling = 50
 				&steepTexStart = 100000
 				&steepTexEnd = 200000
+				&deepMultiFactor = 1
+				&mainMultiFactor = 1
+				&highMultiFactor = 1
+				&snowMultiFactor = 1
 			}
 			%FallbackMaterial
 			{
+				&texTiling = 2000
 				&groundTexStart = 5000
 				&groundTexEnd = 12000
+				&multiFactor = 0.5
 			}
 		}
 	}
 }
-
