--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -7,10 +7,30 @@
 			@Material
 			{
 				// Resize
+				@texTiling *= #$../../SigmaDimensions/Resize$
 				@groundTexStart *= #$../../SigmaDimensions/Resize$
 				@groundTexEnd *= #$../../SigmaDimensions/Resize$
+				@steepTiling *= #$../../SigmaDimensions/Resize$
 				@steepTexStart *= #$../../SigmaDimensions/Resize$
 				@steepTexEnd *= #$../../SigmaDimensions/Resize$
+				@deepMultiFactor *= #$../../SigmaDimensions/Resize$
+				@mainMultiFactor *= #$../../SigmaDimensions/Resize$
+				@highMultiFactor *= #$../../SigmaDimensions/Resize$
+				@snowMultiFactor *= #$../../SigmaDimensions/Resize$
+				@steepNearTiling *= #$../../SigmaDimensions/Resize$
+				@lowNearTiling *= #$../../SigmaDimensions/Resize$
+				@lowMultiFactor *= #$../../SigmaDimensions/Resize$
+				@lowBumpNearTiling *= #$../../SigmaDimensions/Resize$
+				@lowBumpFarTiling *= #$../../SigmaDimensions/Resize$
+				@midNearTiling *= #$../../SigmaDimensions/Resize$
+				@midMultiFactor *= #$../../SigmaDimensions/Resize$
+				@midBumpNearTiling *= #$../../SigmaDimensions/Resize$
+				@midBumpFarTiling *= #$../../SigmaDimensions/Resize$
+				@highNearTiling *= #$../../SigmaDimensions/Resize$
+				@highBumpNearTiling *= #$../../SigmaDimensions/Resize$
+				@highBumpFarTiling *= #$../../SigmaDimensions/Resize$
+				@atmosphereDepth *= #$../../SigmaDimensions/Resize$
+
 				// landscape
 				@groundTexStart *= #$../../SigmaDimensions/landscape$
 				@groundTexEnd *= #$../../SigmaDimensions/landscape$
@@ -20,8 +40,11 @@
 			@FallbackMaterial
 			{
 				// Resize
+				@texTiling *= #$../../SigmaDimensions/Resize$
 				@groundTexStart *= #$../../SigmaDimensions/Resize$
 				@groundTexEnd *= #$../../SigmaDimensions/Resize$
+				@multiFactor *= #$../../SigmaDimensions/Resize$
+				
 				// landscape
 				@groundTexStart *= #$../../SigmaDimensions/landscape$
 				@groundTexEnd *= #$../../SigmaDimensions/landscape$
