Adding astoroid-specific changes

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setAsteroids.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setAsteroids.cfg
@@ -10,8 +10,8 @@
 				{
 					@semiMajorAxis,*
 					{
-						@minValue,* *= #$@SigmaDimensions/Rescale$
-						@maxValue,* *= #$@SigmaDimensions/Rescale$
+						@minValue,* *= #$../../../../Rescale$
+						@maxValue,* *= #$../../../../Rescale$
 					}
 				}
 			}
@@ -21,8 +21,8 @@
 				{
 					@semiMajorAxis,*
 					{
-						@minValue,* *= #$@SigmaDimensions/Rescale$
-						@maxValue,* *= #$@SigmaDimensions/Rescale$
+						@minValue,* *= #$../../../../Rescale$
+						@maxValue,* *= #$../../../../Rescale$
 					}
 				}
 			}
