--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -80,4 +80,12 @@
 			tempASL = #$@SigmaDimensions/tempASL$
 		}
 	}
+	@Asteroid,*
+	{
+		!SigmaDimensions,* {}
+		SigmaDimensions
+		{
+			Rescale = #$@SigmaDimensions/Rescale$
+		}
+	}
 }
