fix pressure display

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Atmosphere.cfg
@@ -10,7 +10,7 @@
 		@Atmosphere
 		{
 			
-			!staticPressureASL,* = DEL
+			&staticPressureASL = 101.325
 			&temperatureSeaLevel = 287
 			
 			%pressureCurve {}
