--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -57,6 +57,9 @@
 		{
 			@Ring
 			{
+				@outerRadius /= #$../../SigmaDimensions/Resize$
+				@innerRadius /= #$../../SigmaDimensions/Resize$
+
 				@outerRadius *= #$../../SigmaDimensions/CustomRingSize$
 				@innerRadius *= #$../../SigmaDimensions/CustomRingSize$
 			}
