fix kerbin pressure ASL

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Atmosphere.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Templates/Kerbin/Kerbin_Atmosphere.cfg
@@ -10,7 +10,7 @@
 		@Atmosphere
 		{
 			
-			&staticPressureASL = 101.325
+			&staticPressureASL = 101.324996948242
 			&temperatureSeaLevel = 287
 			
 			%pressureCurve {}
