atmosphereless templates fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -29,6 +29,7 @@
 			
 			// pressure ASL
 			
+			&staticPressureASL = 1
 			@staticPressureASL *= #$../SigmaDimensions/atmoASL$
 			
 			@pressureCurve
