remove kerbin specific stuff

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -64,7 +64,7 @@
 				@innerRadius *= #$../../SigmaDimensions/CustomRingSize$
 			}
 		}
-		@SpaceCenter
+		@SpaceCenterz
 		{
 			%Resize = #$../SigmaDimensions/Resize$
 			%landscape = #$../SigmaDimensions/landscape$
@@ -90,11 +90,11 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
-		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
+		@SpaceCenterz:HAS[#Resize[<0.75],#Resize[>0.009]]
 		{
 			@Resize = 0.75
 		}
-		@SpaceCenter
+		@SpaceCenterz
 		{
 			@radius *= #$Resize$
 		}
@@ -109,6 +109,7 @@
 				{
 					%Resize = #$../../../SigmaDimensions/Resize$
 					@radius /= #$Resize$
+					@Resize /= #$../../../SigmaDimensions/resizeBuildings$
 				}
 				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
 				{
@@ -116,6 +117,7 @@
 				}
 				@MapDecalTangent
 				{
+					@Resize *= #$../../../SigmaDimensions/resizeBuildings$
 					@radius *= #$Resize$
 				}
 			}
