--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -56,6 +56,10 @@
 {
 	%scanAltitude = 1
 }
+@SigmaDimensions:HAS[~resizeBuildings[>0]]:AFTER[SigDim]
+{
+	%resizeBuildings = 1
+}
 
 // Create SigmaDimensions node in each body
 
