copy whole node instead of each single variable

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -68,21 +68,7 @@
 	@Body,*
 	{
 		!SigmaDimensions,* {}
-		SigmaDimensions
-		{
-			Resize = #$@SigmaDimensions/Resize$
-			Rescale = #$@SigmaDimensions/Rescale$
-			Atmosphere = #$@SigmaDimensions/Atmosphere$
-			dayLengthMultiplier = #$@SigmaDimensions/dayLengthMultiplier$
-			geeASLmultiplier = #$@SigmaDimensions/geeASLmultiplier$
-			landscape = #$@SigmaDimensions/landscape$
-			atmoVisualEffect = #$@SigmaDimensions/atmoVisualEffect$
-			resizeScatter = #$@SigmaDimensions/resizeScatter$
-			CustomSoISize = #$@SigmaDimensions/CustomSoISize$
-			CustomRingSize = #$@SigmaDimensions/CustomRingSize$
-			atmoASL = #$@SigmaDimensions/atmoASL$
-			tempASL = #$@SigmaDimensions/tempASL$
-		}
+		#@SigmaDimensions {}
 	}
 	@Asteroid,*
 	{
