resize by default and turn off resizekonstructs

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -58,7 +58,7 @@
 }
 @SigmaDimensions:HAS[~resizeBuildings[>0]]:AFTER[SigDim]
 {
-	%resizeBuildings = 1
+	%resizeBuildings = #$Resize$
 }
 
 // Create SigmaDimensions node in each body
