resizeBuildings only when shrinking planets

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -56,9 +56,13 @@
 {
 	%scanAltitude = 1
 }
-@SigmaDimensions:HAS[~resizeBuildings[>0]]:AFTER[SigDim]
+@SigmaDimensions:HAS[~resizeBuildings[>0],#Resize[<1]]:AFTER[SigDim]
 {
 	%resizeBuildings = #$Resize$
+}
+@SigmaDimensions:HAS[~resizeBuildings[>0],~Resize[<1]]:AFTER[SigDim]
+{
+	%resizeBuildings = 1
 }
 
 // Create SigmaDimensions node in each body
