--- a/[Source]/SigmaDimensions/SigmaDimensions.csproj
+++ b/[Source]/SigmaDimensions/SigmaDimensions.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AtmosphereTopLayer.cs" />
     <Compile Include="SpaceCenterFixer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SigmaDimensions.cs" />
