--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -64,6 +64,10 @@
 {
 	%resizeBuildings = 1
 }
+@SigmaDimensions:HAS[~atmoTopLayer[>0]]:AFTER[SigDim]
+{
+	%atmoTopLayer = 1
+}
 
 // Create SigmaDimensions node in each body
 
