--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -1,27 +1,28 @@
-// Base Settings
-
 SigmaDimensions
 {
+	// Base Settings
+
 	Resize = 1
 	Rescale = 1
 	Atmosphere = 1
 	dayLengthMultiplier = 1
-}
 
 
+	// Advanced Settings
 
-// Advanced Settings
-
-@SigmaDimensions
-{
-	geeASLmultiplier = 1
 	landscape = 1
-	atmoVisualEffect = 1
+	geeASLmultiplier = 1
+
 	resizeScatter = 1
+	resizeBuildings = 0
+
 	CustomSoISize = 0
 	CustomRingSize = 0
+
 	atmoASL = 1
 	tempASL = 1
+	atmoTopLayer = 1
+	atmoVisualEffect = 1
+
 	scanAltitude = 1
-	resizeBuildings = 0
 }
