--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -2,21 +2,6 @@
 {
 	@Body,*
 	{
-		@Atmosphere:HAS[#atmosphereDepth[*]]
-		{
-			%altitude = #$atmosphereDepth$
-			%maxAltitude = #$atmosphereDepth$
-		}
-		@Atmosphere:HAS[#altitude[*],~atmosphereDepth[*]]
-		{
-			%maxAltitude = #$altitude$
-			%atmosphereDepth = #$altitude$
-		}
-		@Atmosphere:HAS[#maxAltitude[*],~altitude[*],~atmosphereDepth[*]]
-		{
-			%altitude = #$maxAltitude$
-			%atmosphereDepth = #$maxAltitude$
-		}
 		@Atmosphere
 		{
 			@maxAltitude *= #$../SigmaDimensions/Atmosphere$
@@ -35,18 +20,39 @@
 			@pressureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,*[2, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
+				
+				@key,*[*, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[0, ] /= #$../../SigmaDimensions/atmoASL$
+				
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
+				
 				@key,* ^= : 0 0 0 x$: :
 			}
 			
 			@temperatureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../SigmaDimensions/tempASL$
-				@key,*[2, ] *= #$../../SigmaDimensions/tempASL$
-				@key,*[3, ] *= #$../../SigmaDimensions/tempASL$
+				
+				@key,*[*, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[0, ] /= #$../../SigmaDimensions/tempASL$
+				
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
+				
+				@key,* ^= : 0 0 0 x$: :
+			}
+			
+			@temperatureSunMultCurve
+			{
+				@key,* ^= :$: 0 0 0 x:
+				
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
+				
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
@@ -116,56 +122,36 @@
 				%transformScale = 0,0,0
 				!removeAFG = DEL
 			}
-		}	
-		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
-		{
-			// pressureCurve
-			
-			@pressureCurve
-			{
-				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,* ^= : 0 0 0 x$: :
-			}
-		}
-		@Atmosphere:HAS[~temperatureCurveIsNormalized[True]]
-		{
-			// temperatureCurve
-			
-			@temperatureCurve
-			{
-				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,* ^= : 0 0 0 x$: :
-			}
-		}
-		@Atmosphere
-		{
-			// temperatureSunMultCurve
-			
-			@temperatureSunMultCurve
-			{
-				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
-				@key,* ^= : 0 0 0 x$: :
-			}
 		}
 	}
+	
+	
+	// ISP fix
+	
 	@Body[Kerbin]
 	{
 		@Atmosphere
 		{
-			// ISP fix
 			@pressureCurve
 			{
 				@key,*[0, ] += 0.0001
 				key,0 = 0 101.325
+			}
+		}
+	}
+	
+	
+	// Normalization Fix
+	
+	@Body,*
+	{
+		@Atmosphere:HAS[#pressureCurveNormalizeFix[True]]
+		{
+			@pressureCurve
+			{
+				@key,*[0, ] /= #$../maxAltitude$
+				@key,*[2, ] *= #$../maxAltitude$
+				@key,*[3, ] *= #$../maxAltitude$
 			}
 		}
 	}
