--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -21,12 +21,13 @@
 			{
 				@key,* ^= :$: 0 0 0 x:
 				
-				@key,*[*, ] *= #$../../SigmaDimensions/atmoASL$
-				@key,*[0, ] /= #$../../SigmaDimensions/atmoASL$
-				
 				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
 				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
 				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
+				
+				@key,*[1, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
 				
 				@key,* ^= : 0 0 0 x$: :
 			}
@@ -35,12 +36,13 @@
 			{
 				@key,* ^= :$: 0 0 0 x:
 				
-				@key,*[*, ] *= #$../../SigmaDimensions/tempASL$
-				@key,*[0, ] /= #$../../SigmaDimensions/tempASL$
-				
 				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
 				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
 				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
+				
+				@key,*[1, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/tempASL$
 				
 				@key,* ^= : 0 0 0 x$: :
 			}
@@ -134,8 +136,8 @@
 		{
 			@pressureCurve
 			{
-				@key,*[0, ] += 0.0001
-				key,0 = 0 101.325
+				@key,*[0, ] += 1e-6
+				key,0 = 0 101.325 0 0
 			}
 		}
 	}
@@ -147,11 +149,17 @@
 	{
 		@Atmosphere:HAS[#pressureCurveNormalizeFix[True]]
 		{
+			!pressureCurveNormalizeFix = DEL
+			pressureCurveIsNormalized = True
 			@pressureCurve
 			{
+				@key,* ^= :$: 0 0 0 x:
+				
 				@key,*[0, ] /= #$../maxAltitude$
 				@key,*[2, ] *= #$../maxAltitude$
 				@key,*[3, ] *= #$../maxAltitude$
+				
+				@key,* ^= : 0 0 0 x$: :
 			}
 		}
 	}
