--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -78,6 +78,14 @@
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
+		@SpaceCenter
+		{
+			@radius *= #$../SigmaDimensions/Resize$
+			@heightMapDeformity *= #$../SigmaDimensions/Resize$
+			@heightMapDeformity *= #$../SigmaDimensions/landscape$
+			@absoluteOffset *= #$../SigmaDimensions/Resize$
+			@absoluteOffset *= #$../SigmaDimensions/landscape$
+		}
 	}
 	@Body[Kerbin]:HAS[~removePQSmods[*MapDecalTangent*]]
 	{
@@ -101,6 +109,21 @@
 					@radius *= #$Resize$
 				}
 			}
+		}
+		@SpaceCenter
+		{
+			%Resize = #$../SigmaDimensions/Resize$
+			@radius /= #$Resize$
+			@Resize /= #$../SigmaDimensions/resizeBuildings$
+		}
+		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
+		{
+			@Resize = 0.75
+		}
+		@SpaceCenter
+		{
+			@Resize *= #$../SigmaDimensions/resizeBuildings$
+			@radius *= #$Resize$
 		}
 	}
 }
