--- a/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/resizePQSMods.cfg
@@ -111,6 +111,7 @@
 				@AerialPerspectiveMaterial,*
 				{
 					@atmosphereDepth *= #$../../../SigmaDimensions/Atmosphere$
+					@atmosphereDepth *= #$../../../SigmaDimensions/atmoTopLayer$
 				}
 				@VertexHeightMap,*
 				{
