--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -6,6 +6,9 @@
 		{
 			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/Atmosphere$
 			@inverseRotThresholdAltitude *= #$../SigmaDimensions/Atmosphere$
+			
+			@timewarpAltitudeLimits,0[*, ] *= #$../SigmaDimensions/atmoTopLayer$
+			@inverseRotThresholdAltitude *= #$../SigmaDimensions/atmoTopLayer$
 		}
 	}
 	@Body:HAS[!Atmosphere]
