--- a/[KittopiaExports]/Kerbin.cfg
+++ b/[KittopiaExports]/Kerbin.cfg
@@ -13,7 +13,7 @@
 			mass = 5.29151583439215E+22
 			gravParameter = 3531600000000
 			rotates = True
-			rotationPeriod = 21549.4251830898
+			rotationPeriod = 21600
 			tidallyLocked = False
 			initialRotation = 90
 			inverseRotThresholdAltitude = 100000
