--- a/[KittopiaExports]/Jool.cfg
+++ b/[KittopiaExports]/Jool.cfg
@@ -32,6 +32,7 @@
 			useTheInName = False
 			selectable = True
 			RDVisibility = VISIBLE
+			maxZoom = 60000
 			ScienceValues
 			{
 				landedDataValue = 30
