--- a/[KittopiaExports]/Ike.cfg
+++ b/[KittopiaExports]/Ike.cfg
@@ -40,49 +40,49 @@
 				{
 					name = Polar Lowlands
 					value = 0
-					color = 0,0.988235295,1,1
+					color = 0.474509805,0.466666669,0.4627451,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.65882355,0,1,1
+					color = 0.576470613,0.576470613,0.576470613,1
 				}
 				Biome
 				{
 					name = Eastern Mountain Ridge
 					value = 0
-					color = 1,0.0235294122,0,1
+					color = 1,1,1,1
 				}
 				Biome
 				{
 					name = Western Mountain Ridge
 					value = 0
-					color = 1,0.517647088,0,1
+					color = 0.925490201,0.925490201,0.925490201,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0.964705884,1,0,1
+					color = 0.407843143,0.407843143,0.407843143,1
 				}
 				Biome
 				{
 					name = South Eastern Mountain Range
 					value = 0
-					color = 1,0,0.894117653,1
+					color = 0.854901969,0.854901969,0.854901969,1
 				}
 				Biome
 				{
 					name = South Pole
 					value = 0
-					color = 0.470588237,1,0,1
+					color = 0.517647088,0.517647088,0.517647088,1
 				}
 				Biome
 				{
 					name = Central Mountain Range
 					value = 0
-					color = 0.0941176489,0,1,1
+					color = 0.800000012,0.800000012,0.800000012,1
 				}
 			}
 			ScienceValues
